@@ -5,6 +5,7 @@
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Improve tests for create() method.
  - Update Module::Install to 1.19 version.
+ - Update author name.
  - Update .travis.yml to reality.
 
 0.06 2014-10-24T02:02:01+02:00
